# HID_Control_WIFI_receiver

./: .gitignore  CMakeLists.txt  Makefile  OTA_info.json  latest_firmware_info.json  partitions_example.csv  partitions_example_backup_copy.csv  sdkconfig  sdkconfig.less_old  sdkconfig.old
components/cmd_system/: CMakeLists.txt  cmd_system.c
main/: CMakeLists.txt  ble_hid_app.h  ble_hidd_demo_main.c  component.mk  esp32_nat_router.c  esp32_nat_router.h  hid_app_control.c  hid_app_control.h  hid_dev.h  http_server.c  io_hardware.c  io_hardware.h  main.c  ws2812.c
